manifests/sample-app/deploy.yaml
# manifests/sample-app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-nginx
  template:
    metadata:
      labels:
        app: sample-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx
  namespace: default
spec:
  selector:
    app: sample-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
